--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,10 +3,10 @@
 <ul>
   <% @articles.each do |article| %>
     <li>
+<a href = "/articles/<% article.id %>">
       <%= article.title %>
+</a>
     </li>
-<li>
-<%= article.body %>
-</li>
+
   <% end %>
 </ul>
